--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-        <p>Smart manager sytem is a product made by KISO company via its special team known <b><i>kisoft Team</i></b>. </p>
-        <p>Smart manager is a next generation software solution that empower your business by giving your an accuratte picture of your business growth by tracking spendings, profits, loss and sales</p>
-        Smart Manager system is well designed for operating on 
+        <p>Smart manager sytem is a product made by KISO company via its special team known <b><i>kisoft Team</i></b>.
+          Smart manager is a next generation software solution that empower your business by giving your an accuratte picture of your business growth by tracking spendings, profits, loss and sales.
+          Smart Manager system is well designed for operating on </p>
         <ul>
           <li>Products Management</li>
           The system includes specialized tools to assist users/shopkeepers in efficiently managing their products. 
@@ -271,7 +271,6 @@
           when we complete all final tests for <b>Version 1</b>.
         <i>Our slogan:<br>
         “Use Smart Manager for Better Profitable Shop.</i>
-</p>
         <button class="btn btn-outline-primary" onclick="openCommentModal()">Leave a Comment</button>
       </div>
     </div>
@@ -709,6 +708,7 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
 
