--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <div class="card-body">
             <h5 class="card-title">Kings' Academy</h5>
             <p class="card-text">A special system for management of students data in instutions<p>
-            <button class="btn btn-primary" data-bs-toggle="king_project" data-bs-target="#viewModal1">View Info</button>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#viewModal1">View Info</button>
           </div>
         </div>
       </div>
@@ -760,6 +760,7 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
 
